--- a/snippets/editor/headings/headings-color.css
+++ b/snippets/editor/headings/headings-color.css
@@ -46,7 +46,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 }
 
 .headings-accent {
-  --header-gradient-base-color: var(--color-accent);
+  --header-gradient-base-color: var(--text-accent);
 }
 
 .headings-hue,
