--- a/snippets/editor/callouts/callouts-metadata.css
+++ b/snippets/editor/callouts/callouts-metadata.css
@@ -132,30 +132,30 @@ body {
   justify-content: center;
 }
 
-.markdown-preview-view .callout:is([data-callout-metadata~=right], [data-callout-metadata~=float-right]) {
-  float: right;
-  clear: right;
-  margin: var(--fas-float-inline-margin, 12px) 0 var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px);
-  max-width: 300px;
-}
-@container not (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
-  .markdown-preview-view .callout:is([data-callout-metadata~=right], [data-callout-metadata~=float-right]) img {
-    max-width: min(100%, 299px - var(--image-shadow-offset));
+@media (width > 600px) {
+  .markdown-preview-view .callout:is([data-callout-metadata~=right], [data-callout-metadata~=float-right]) {
+    float: right;
+    clear: right;
+    margin: var(--fas-float-inline-margin, 12px) 0 var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px);
+    max-width: 300px;
+  }
+  @container not (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
+    .markdown-preview-view .callout:is([data-callout-metadata~=right], [data-callout-metadata~=float-right]) img {
+      max-width: min(100%, 299px - var(--image-shadow-offset));
+    }
+  }
+  .markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) {
+    float: left;
+    clear: left;
+    margin: var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) 0;
+    max-width: 300px;
+  }
+  @container not (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
+    .markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) img {
+      max-width: min(100%, 299px - var(--image-shadow-offset));
+    }
   }
 }
-
-.markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) {
-  float: left;
-  clear: left;
-  margin: var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) var(--fas-float-inline-margin, 12px) 0;
-  max-width: 300px;
-}
-@container not (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
-  .markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) img {
-    max-width: min(100%, 299px - var(--image-shadow-offset));
-  }
-}
-
 .callout[data-callout-metadata~=clear] {
   clear: both;
 }
