--- a/snippets/editor/headings/h-stroke.css
+++ b/snippets/editor/headings/h-stroke.css
@@ -26,7 +26,6 @@ body {
 .markdown-preview-view:is(.h1-stroke, .h1-stroke-left-aligned) h1::before {
   content: "";
   display: block;
-  flex-grow: 1;
   background-color: var(--h1-border-color);
   height: 1px;
 }
@@ -41,9 +40,10 @@ body {
   background-color: var(--h1-border-color-collapsed);
 }
 
-.markdown-preview-view.h1-stroke-left-aligned h1 {
-  align-items: left;
+.markdown-preview-view.h1-stroke h1::before {
+  flex-grow: 1;
 }
+
 .markdown-preview-view.h1-stroke-left-aligned h1::before {
   flex-grow: 0;
   flex-basis: 10px;
@@ -58,7 +58,6 @@ body {
 .markdown-preview-view:is(.h2-stroke, .h2-stroke-left-aligned) h2::before {
   content: "";
   display: block;
-  flex-grow: 1;
   background-color: var(--h2-border-color);
   height: 1px;
 }
@@ -73,9 +72,10 @@ body {
   background-color: var(--h2-border-color-collapsed);
 }
 
-.markdown-preview-view.h2-stroke-left-aligned h2 {
-  align-items: left;
+.markdown-preview-view.h2-stroke h2::before {
+  flex-grow: 1;
 }
+
 .markdown-preview-view.h2-stroke-left-aligned h2::before {
   flex-grow: 0;
   flex-basis: 10px;
@@ -90,7 +90,6 @@ body {
 .markdown-preview-view:is(.h3-stroke, .h3-stroke-left-aligned) h3::before {
   content: "";
   display: block;
-  flex-grow: 1;
   background-color: var(--h3-border-color);
   height: 1px;
 }
@@ -105,9 +104,10 @@ body {
   background-color: var(--h3-border-color-collapsed);
 }
 
-.markdown-preview-view.h3-stroke-left-aligned h3 {
-  align-items: left;
+.markdown-preview-view.h3-stroke h3::before {
+  flex-grow: 1;
 }
+
 .markdown-preview-view.h3-stroke-left-aligned h3::before {
   flex-grow: 0;
   flex-basis: 10px;
@@ -122,7 +122,6 @@ body {
 .markdown-preview-view:is(.h4-stroke, .h4-stroke-left-aligned) h4::before {
   content: "";
   display: block;
-  flex-grow: 1;
   background-color: var(--h4-border-color);
   height: 1px;
 }
@@ -137,9 +136,10 @@ body {
   background-color: var(--h4-border-color-collapsed);
 }
 
-.markdown-preview-view.h4-stroke-left-aligned h4 {
-  align-items: left;
+.markdown-preview-view.h4-stroke h4::before {
+  flex-grow: 1;
 }
+
 .markdown-preview-view.h4-stroke-left-aligned h4::before {
   flex-grow: 0;
   flex-basis: 10px;
@@ -154,7 +154,6 @@ body {
 .markdown-preview-view:is(.h5-stroke, .h5-stroke-left-aligned) h5::before {
   content: "";
   display: block;
-  flex-grow: 1;
   background-color: var(--h5-border-color);
   height: 1px;
 }
@@ -169,9 +168,10 @@ body {
   background-color: var(--h5-border-color-collapsed);
 }
 
-.markdown-preview-view.h5-stroke-left-aligned h5 {
-  align-items: left;
+.markdown-preview-view.h5-stroke h5::before {
+  flex-grow: 1;
 }
+
 .markdown-preview-view.h5-stroke-left-aligned h5::before {
   flex-grow: 0;
   flex-basis: 10px;
@@ -186,7 +186,6 @@ body {
 .markdown-preview-view:is(.h6-stroke, .h6-stroke-left-aligned) h6::before {
   content: "";
   display: block;
-  flex-grow: 1;
   background-color: var(--h6-border-color);
   height: 1px;
 }
@@ -201,10 +200,311 @@ body {
   background-color: var(--h6-border-color-collapsed);
 }
 
-.markdown-preview-view.h6-stroke-left-aligned h6 {
-  align-items: left;
+.markdown-preview-view.h6-stroke h6::before {
+  flex-grow: 1;
 }
+
 .markdown-preview-view.h6-stroke-left-aligned h6::before {
   flex-grow: 0;
   flex-basis: 10px;
+}
+
+.h1-stroke {
+  --h1-stroke-alignment: center;
+  --h1-stroke-left-anchor: 20px;
+  --h1-stroke-padding-left: 0px;
+}
+
+.h1-stroke-left-aligned {
+  --h1-stroke-alignment: left;
+  --h1-stroke-left-anchor: -10px;
+  --h1-stroke-padding-left: 30px;
+}
+
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 {
+  --h1-weight: var(--font-extralight);
+  text-align: var(--h1-stroke-alignment);
+}
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .cm-fold-indicator ~ span:nth-child(1 of .cm-fold-indicator ~ span) {
+  anchor-name: --header-anchor-left;
+}
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 :nth-last-child(1 of .cm-header-1) {
+  anchor-name: --header-anchor-right;
+}
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .cm-header-1 {
+  padding-left: var(--h1-stroke-padding-left);
+}
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .cm-header-1::before, .is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .cm-header-1::after {
+  content: "";
+  position: absolute;
+  bottom: 0.5em;
+  display: block;
+  background-color: var(--h1-border-color);
+  height: 1px;
+}
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .cm-header-1::before {
+  position-anchor: --header-anchor-left;
+  left: 0;
+  right: calc(anchor(left) + var(--h1-stroke-left-anchor));
+}
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .cm-header-1::after {
+  position-anchor: --header-anchor-right;
+  right: 0;
+  left: calc(anchor(right) + 20px);
+}
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .is-collapsed ~ .cm-header-1::before, .is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .is-collapsed ~ .cm-header-1::after {
+  background-color: var(--h1-border-color-collapsed);
+}
+.is-live-preview:is(.h1-stroke, .h1-stroke-left-aligned) .HyperMD-header-1 .is-collapsed ~ .cm-header-1::after {
+  left: calc(anchor(right) + 20px + 1ch);
+}
+
+.h2-stroke {
+  --h2-stroke-alignment: center;
+  --h2-stroke-left-anchor: 20px;
+  --h2-stroke-padding-left: 0px;
+}
+
+.h2-stroke-left-aligned {
+  --h2-stroke-alignment: left;
+  --h2-stroke-left-anchor: -10px;
+  --h2-stroke-padding-left: 30px;
+}
+
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 {
+  --h2-weight: var(--font-extralight);
+  text-align: var(--h2-stroke-alignment);
+}
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .cm-fold-indicator ~ span:nth-child(1 of .cm-fold-indicator ~ span) {
+  anchor-name: --header-anchor-left;
+}
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 :nth-last-child(1 of .cm-header-2) {
+  anchor-name: --header-anchor-right;
+}
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .cm-header-2 {
+  padding-left: var(--h2-stroke-padding-left);
+}
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .cm-header-2::before, .is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .cm-header-2::after {
+  content: "";
+  position: absolute;
+  bottom: 0.5em;
+  display: block;
+  background-color: var(--h2-border-color);
+  height: 1px;
+}
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .cm-header-2::before {
+  position-anchor: --header-anchor-left;
+  left: 0;
+  right: calc(anchor(left) + var(--h2-stroke-left-anchor));
+}
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .cm-header-2::after {
+  position-anchor: --header-anchor-right;
+  right: 0;
+  left: calc(anchor(right) + 20px);
+}
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .is-collapsed ~ .cm-header-2::before, .is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .is-collapsed ~ .cm-header-2::after {
+  background-color: var(--h2-border-color-collapsed);
+}
+.is-live-preview:is(.h2-stroke, .h2-stroke-left-aligned) .HyperMD-header-2 .is-collapsed ~ .cm-header-2::after {
+  left: calc(anchor(right) + 20px + 1ch);
+}
+
+.h3-stroke {
+  --h3-stroke-alignment: center;
+  --h3-stroke-left-anchor: 20px;
+  --h3-stroke-padding-left: 0px;
+}
+
+.h3-stroke-left-aligned {
+  --h3-stroke-alignment: left;
+  --h3-stroke-left-anchor: -10px;
+  --h3-stroke-padding-left: 30px;
+}
+
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 {
+  --h3-weight: var(--font-extralight);
+  text-align: var(--h3-stroke-alignment);
+}
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .cm-fold-indicator ~ span:nth-child(1 of .cm-fold-indicator ~ span) {
+  anchor-name: --header-anchor-left;
+}
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 :nth-last-child(1 of .cm-header-3) {
+  anchor-name: --header-anchor-right;
+}
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .cm-header-3 {
+  padding-left: var(--h3-stroke-padding-left);
+}
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .cm-header-3::before, .is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .cm-header-3::after {
+  content: "";
+  position: absolute;
+  bottom: 0.5em;
+  display: block;
+  background-color: var(--h3-border-color);
+  height: 1px;
+}
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .cm-header-3::before {
+  position-anchor: --header-anchor-left;
+  left: 0;
+  right: calc(anchor(left) + var(--h3-stroke-left-anchor));
+}
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .cm-header-3::after {
+  position-anchor: --header-anchor-right;
+  right: 0;
+  left: calc(anchor(right) + 20px);
+}
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .is-collapsed ~ .cm-header-3::before, .is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .is-collapsed ~ .cm-header-3::after {
+  background-color: var(--h3-border-color-collapsed);
+}
+.is-live-preview:is(.h3-stroke, .h3-stroke-left-aligned) .HyperMD-header-3 .is-collapsed ~ .cm-header-3::after {
+  left: calc(anchor(right) + 20px + 1ch);
+}
+
+.h4-stroke {
+  --h4-stroke-alignment: center;
+  --h4-stroke-left-anchor: 20px;
+  --h4-stroke-padding-left: 0px;
+}
+
+.h4-stroke-left-aligned {
+  --h4-stroke-alignment: left;
+  --h4-stroke-left-anchor: -10px;
+  --h4-stroke-padding-left: 30px;
+}
+
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 {
+  --h4-weight: var(--font-extralight);
+  text-align: var(--h4-stroke-alignment);
+}
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .cm-fold-indicator ~ span:nth-child(1 of .cm-fold-indicator ~ span) {
+  anchor-name: --header-anchor-left;
+}
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 :nth-last-child(1 of .cm-header-4) {
+  anchor-name: --header-anchor-right;
+}
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .cm-header-4 {
+  padding-left: var(--h4-stroke-padding-left);
+}
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .cm-header-4::before, .is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .cm-header-4::after {
+  content: "";
+  position: absolute;
+  bottom: 0.5em;
+  display: block;
+  background-color: var(--h4-border-color);
+  height: 1px;
+}
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .cm-header-4::before {
+  position-anchor: --header-anchor-left;
+  left: 0;
+  right: calc(anchor(left) + var(--h4-stroke-left-anchor));
+}
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .cm-header-4::after {
+  position-anchor: --header-anchor-right;
+  right: 0;
+  left: calc(anchor(right) + 20px);
+}
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .is-collapsed ~ .cm-header-4::before, .is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .is-collapsed ~ .cm-header-4::after {
+  background-color: var(--h4-border-color-collapsed);
+}
+.is-live-preview:is(.h4-stroke, .h4-stroke-left-aligned) .HyperMD-header-4 .is-collapsed ~ .cm-header-4::after {
+  left: calc(anchor(right) + 20px + 1ch);
+}
+
+.h5-stroke {
+  --h5-stroke-alignment: center;
+  --h5-stroke-left-anchor: 20px;
+  --h5-stroke-padding-left: 0px;
+}
+
+.h5-stroke-left-aligned {
+  --h5-stroke-alignment: left;
+  --h5-stroke-left-anchor: -10px;
+  --h5-stroke-padding-left: 30px;
+}
+
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 {
+  --h5-weight: var(--font-extralight);
+  text-align: var(--h5-stroke-alignment);
+}
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .cm-fold-indicator ~ span:nth-child(1 of .cm-fold-indicator ~ span) {
+  anchor-name: --header-anchor-left;
+}
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 :nth-last-child(1 of .cm-header-5) {
+  anchor-name: --header-anchor-right;
+}
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .cm-header-5 {
+  padding-left: var(--h5-stroke-padding-left);
+}
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .cm-header-5::before, .is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .cm-header-5::after {
+  content: "";
+  position: absolute;
+  bottom: 0.5em;
+  display: block;
+  background-color: var(--h5-border-color);
+  height: 1px;
+}
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .cm-header-5::before {
+  position-anchor: --header-anchor-left;
+  left: 0;
+  right: calc(anchor(left) + var(--h5-stroke-left-anchor));
+}
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .cm-header-5::after {
+  position-anchor: --header-anchor-right;
+  right: 0;
+  left: calc(anchor(right) + 20px);
+}
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .is-collapsed ~ .cm-header-5::before, .is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .is-collapsed ~ .cm-header-5::after {
+  background-color: var(--h5-border-color-collapsed);
+}
+.is-live-preview:is(.h5-stroke, .h5-stroke-left-aligned) .HyperMD-header-5 .is-collapsed ~ .cm-header-5::after {
+  left: calc(anchor(right) + 20px + 1ch);
+}
+
+.h6-stroke {
+  --h6-stroke-alignment: center;
+  --h6-stroke-left-anchor: 20px;
+  --h6-stroke-padding-left: 0px;
+}
+
+.h6-stroke-left-aligned {
+  --h6-stroke-alignment: left;
+  --h6-stroke-left-anchor: -10px;
+  --h6-stroke-padding-left: 30px;
+}
+
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 {
+  --h6-weight: var(--font-extralight);
+  text-align: var(--h6-stroke-alignment);
+}
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .cm-fold-indicator ~ span:nth-child(1 of .cm-fold-indicator ~ span) {
+  anchor-name: --header-anchor-left;
+}
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 :nth-last-child(1 of .cm-header-6) {
+  anchor-name: --header-anchor-right;
+}
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .cm-header-6 {
+  padding-left: var(--h6-stroke-padding-left);
+}
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .cm-header-6::before, .is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .cm-header-6::after {
+  content: "";
+  position: absolute;
+  bottom: 0.5em;
+  display: block;
+  background-color: var(--h6-border-color);
+  height: 1px;
+}
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .cm-header-6::before {
+  position-anchor: --header-anchor-left;
+  left: 0;
+  right: calc(anchor(left) + var(--h6-stroke-left-anchor));
+}
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .cm-header-6::after {
+  position-anchor: --header-anchor-right;
+  right: 0;
+  left: calc(anchor(right) + 20px);
+}
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .is-collapsed ~ .cm-header-6::before, .is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .is-collapsed ~ .cm-header-6::after {
+  background-color: var(--h6-border-color-collapsed);
+}
+.is-live-preview:is(.h6-stroke, .h6-stroke-left-aligned) .HyperMD-header-6 .is-collapsed ~ .cm-header-6::after {
+  left: calc(anchor(right) + 20px + 1ch);
 }
